JUDDI-299 Applying patch from David Jencks.
git-svn-id: https://svn.apache.org/repos/asf/webservices/juddi/trunk@905487 13f79535-47bb-0310-9956-ffa450edef68